# internal/models/submissions.go
@@ -1,17 +1,16 @@
 package models
 
 import (
-	"github.com/google/uuid"
 	"gorm.io/gorm"
 )
 
 type Submission struct {
 	gorm.Model
-	FormID      uuid.UUID `gorm:"index"`
+	FormID      uint `gorm:"index"`
 	FormVersion int
 
-	CreatedByUserId uint `gorm:"index"` 
-	Status    string `gorm:"size:30;default:'submitted'"`
+	CreatedByUserId uint   `gorm:"index"`
+	Status          string `gorm:"size:30;default:'submitted'"`
 
 	Answers []FormAnswer `gorm:"constraint:OnDelete:CASCADE"`
 }
@@ -20,16 +19,22 @@ func CreateSubmission(db *gorm.DB, submission *Submission) error {
 	return db.Create(submission).Error
 }
 
-func GetSubmission(db *gorm.DB, id uuid.UUID) (*Submission, error) {
+func GetSubmission(db *gorm.DB, id uint) (*Submission, error) {
 	var submission Submission
-	err := db.First(&submission, id).Error
+	err := db.Preload("Answers").First(&submission, id).Error
 	return &submission, err
+}
+
+func GetSubmissionsByFormID(db *gorm.DB, formID uint) ([]Submission, error) {
+	var submissions []Submission
+	err := db.Preload("Answers").Where("form_id = ?", formID).Find(&submissions).Error
+	return submissions, err
 }
 
 func UpdateSubmission(db *gorm.DB, submission *Submission) error {
 	return db.Save(submission).Error
 }
 
-func DeleteSubmission(db *gorm.DB, id uuid.UUID) error {
+func DeleteSubmission(db *gorm.DB, id uint) error {
 	return db.Delete(&Submission{}, id).Error
 }
